# BCAT

./: .gitignore  404.html  BCAT.py  CHANGELOG.md  CITATION.cff  COMPLEXITY_ANALYSIS.md  CONTRIBUTING.md  DATA_AVAILABILITY_STATEMENT.md  English - best game no one played.nlogo  LICENSE  README.md  index.html  llms.txt  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: indexnow.yml
test_scenarios/: README.md  fig11_adoption_threshold_only.json  fig11_opinion_dynamics_only.json  fig4_favorable_review_good_sales.json  fig5_favorable_review_poor_sales.json  sensitivity_analysis_1000_runs.json
