[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcat"
version = "1.2.0"
description = "Bounded Confidence and Adoption Threshold Model — a mixed opinion dynamics and innovation diffusion simulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chung-Yuan Huang", email = "gscott@mail.cgu.edu.tw"},
    {name = "Sheng-Wen Wang", email = "swwang@nkust.edu.tw"},
]
keywords = ["opinion-dynamics", "adoption-threshold", "diffusion-of-innovation", "agent-based-modeling", "bounded-confidence", "social-networks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/canslab1/BCAT"
Repository = "https://github.com/canslab1/BCAT"
Issues = "https://github.com/canslab1/BCAT/issues"
